vlib/v/checker/tests/comptime_for.out
vlib/v/checker/tests/comptime_for.vv:2:7: warning: unused variable: `m`
    1 | fn unknown() {
    2 |     $for m in Huh.methods {
      |          ^
    3 |     }
    4 |     $for f in Huh.fields {
vlib/v/checker/tests/comptime_for.vv:4:7: warning: unused variable: `f`
    2 |     $for m in Huh.methods {
    3 |     }
    4 |     $for f in Huh.fields {
      |          ^
    5 |     }
    6 |     $for f in T.fields {
vlib/v/checker/tests/comptime_for.vv:2:12: error: $for expects a type name or variable name to be used here, but Huh is not a type or variable name
    1 | fn unknown() {
    2 |     $for m in Huh.methods {
      |               ~~~
    3 |     }
    4 |     $for f in Huh.fields {
vlib/v/checker/tests/comptime_for.vv:4:12: error: $for expects a type name or variable name to be used here, but Huh is not a type or variable name
    2 |     $for m in Huh.methods {
    3 |     }
    4 |     $for f in Huh.fields {
      |               ~~~
    5 |     }
    6 |     $for f in T.fields {
vlib/v/checker/tests/comptime_for.vv:6:12: error: $for expects a type name or variable name to be used here, but T is not a type or variable name
    4 |     $for f in Huh.fields {
    5 |     }
    6 |     $for f in T.fields {
      |               ^
    7 |         $if f.typ is Huh {
    8 |         }
vlib/v/checker/tests/comptime_for.vv:12:6: error: undefined ident: `m`
   10 |         }
   11 |     }
   12 |     _ = m
      |         ^
   13 | }
   14 |
vlib/v/checker/tests/comptime_for.vv:19:16: error: unknown type `U`
   17 |         $if f.typ is T {
   18 |         }
   19 |         $if f.typ is U {
      |                      ^
   20 |         }
   21 |     }
vlib/v/checker/tests/comptime_for.vv:22:6: error: undefined ident: `f`
   20 |         }
   21 |     }
   22 |     _ = f
      |         ^
   23 | }
   24 |
